correction IE

--- a/styles3.css
+++ b/styles3.css
@@ -282,6 +282,11 @@ li.nav-item.dropdown {
     margin: 0 auto;
 }
 
+#left-nav #left-menu {
+    -ms-flex-direction: column !important;
+    flex-direction: column !important;
+}
+
 @media (max-width: 1280px) {
     .bd-title {
         font-size: 1rem;
